RESOLVED FIXED314947
REGRESSION (310623@main): Style changes to <option> (or children) do not repaint <select>
https://bugs.webkit.org/show_bug.cgi?id=314947
Summary REGRESSION (310623@main): Style changes to <option> (or children) do not repa...
Anne van Kesteren
Reported 2026-05-16 05:30:08 PDT
.
Attachments
Anne van Kesteren
Comment 1 2026-05-16 05:30:10 PDT
Anne van Kesteren
Comment 2 2026-05-16 05:35:03 PDT
EWS
Comment 3 2026-05-19 00:17:23 PDT
Committed 313466@main (7f4974d34f8f): <https://commits.webkit.org/313466@main> Reviewed commits have been landed. Closing PR #65041 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.