REGRESSION (310623@main): Style changes to <option> (or children) do not repaint <select> https://bugs.webkit.org/show_bug.cgi?id=314947 rdar://177200878

Reviewed by Abrar Rahman Protyasha.

310623@main removed HTMLOptionElement::willResetComputedStyle() on the
assumption that the existing test coverage was sufficient, but the
existing reference test would always repaint before comparison.

So we restore the hook, with two improvements:

- Tighten the dispatch invariant in Element::resetComputedStyle() to
  only fire willResetComputedStyle for elements without a renderer.
  This is relevant in the new world of appearance: base.

- Add a repaint regression test.

The FIXME about firing on no-op style resets moves to the dispatch site,
where the over-eager behavior actually lives.

Canonical link: https://commits.webkit.org/313466@main