Source/WebCore/html/HTMLOptionElement.h
@@ -102,6 +102,8 @@ private:
 
     void childrenChanged(const ChildChange&) final;
 
+    void willResetComputedStyle() final;
+
     String collectOptionInnerText() const;
     String collectOptionInnerTextCollapsingWhitespace() const;
 
